Revert "pch (10/10): use normal header if precompiling is disabled."
Summary: This reverts commit 3a3784c122be9f8e62cc0577c2f41be889fa911f.

Test Plan: shipshiprevert

Reviewed By: dulmarod

fbshipit-source-id: 9cf47d9